# xfoil-cpp

./: .clang-format.yaml  .gitignore  CMakeLists.txt  XFoil.cpp  XFoil.h  XFoilTest.cpp  XFoil_aerodynamics.cpp  XFoil_blsolve.cpp  XFoil_boundary.cpp  XFoil_boundary_layer_core.cpp  XFoil_init.cpp  XFoil_march.cpp  XFoil_viscous.cpp  main.cpp  xfoil_params.h
apps/cli/: main.cpp
model/: boundary_layer.cpp  boundary_layer.hpp  math_util.cpp  math_util.hpp  math_util_test.cpp  matrix.cpp  matrix.hpp  matrix_test.cpp  psi.cpp  psi.hpp  psi_result.hpp  spline.cpp  spline.hpp  spline_test.cpp
model/coefficient/: dissipation.cpp  dissipation.hpp  dissipation_test.cpp  skin_friction.cpp  skin_friction.hpp
src/: Foil.h
src/application/xfoil/: XFoil.cpp  XFoil.h  XFoilAnalysis.hpp  XFoilAnalysis_core.cpp  XFoilInternalState.hpp  XFoilResult.hpp  XFoilSharedTypes.hpp  XFoilWorkspace.hpp  XFoil_aerodynamics.cpp  XFoil_geometry.cpp  XFoil_init.cpp  XFoil_viscous.cpp
src/core/: boundary_layer_util.cpp  boundary_layer_util.hpp  math_util.cpp  math_util.hpp  side_pair.hpp  spline.cpp  spline.hpp
src/domain/: boundary_layer.cpp  boundary_layer.hpp  flow_regime.hpp  flow_state.hpp  foil.hpp  foil_shape.hpp
src/domain/boundary_layer/: bl_compressibility_params.hpp  boundary_layer_builder.hpp  boundary_layer_diff_solver.cpp  boundary_layer_diff_solver.hpp  boundary_layer_variables_solver.cpp  boundary_layer_variables_solver.hpp
src/domain/coefficient/: aero_coefficients.hpp  bl_newton.hpp  dissipation.cpp  dissipation.hpp  skin_friction.cpp  skin_friction.hpp
src/domain/foil/: FoilAerodynamicCache.hpp  edge.cpp  edge.hpp  foil.cpp  foil.hpp  foil_shape.cpp  foil_shape.hpp
src/infrastructure/: logger.hpp
src/model/: boundary_layer.cpp  boundary_layer.hpp
src/model/analysis/: stagnation_feature.cpp  stagnation_feature.hpp
src/model/boundary_layer/: bl_transition_params.hpp  features.hpp  physics.cpp  physics.hpp  runtime_types.hpp  skin_friction_coefficients.hpp  state.hpp
src/model/boundary_layer/reference/: bl_compressibility_params.cpp  bl_compressibility_params.hpp  bl_reynolds_params.cpp  bl_reynolds_params.hpp
src/model/coefficient/: xfoil_postprocess.cpp  xfoil_postprocess.hpp
src/model/foil/: FoilAerodynamicCache.hpp  edge.cpp  edge.hpp  foil.cpp  foil.hpp  foil_shape.cpp  foil_shape.hpp
src/numerics/: math_util.cpp  math_util.hpp  spline.cpp
src/numerics/boundary_layer/: diff_system.cpp  diff_system.hpp  variables.cpp  variables.hpp
src/numerics/coefficient/: dissipation.hpp  skin_friction.hpp
src/simulation/: Blsolve.cpp  Blsolve.hpp  BoundaryLayer.cpp  BoundaryLayer.hpp  BoundaryLayerFacade.cpp  BoundaryLayerFacade.hpp  BoundaryLayerStore.cpp  BoundaryLayerStore.hpp  BoundaryLayer_geometry.cpp  BoundaryLayer_march.cpp  BoundaryLayer_march.hpp  BoundaryLayer_transition.cpp  BoundaryLayer_transition.hpp  InviscidSolver.cpp  InviscidSolver.hpp  XFoil.cpp  XFoil.h  XFoil_aerodynamics.cpp  XFoil_bldif.cpp  XFoil_blsolve.cpp  XFoil_boundary.cpp  XFoil_boundary_layer_core.cpp  XFoil_geometry.cpp  XFoil_init.cpp  XFoil_march.cpp  XFoil_viscous.cpp  bldif.hpp  boundary_layer_aerodynamics.cpp  boundary_layer_aerodynamics.hpp  boundary_layer_geometry.hpp  boundary_layer_mixed_mode.cpp  boundary_layer_mixed_mode.hpp  boundary_layer_relaxation.cpp  boundary_layer_relaxation.hpp  boundary_layer_runtime_state.cpp  boundary_layer_runtime_state.hpp  boundary_layer_setbl.cpp  boundary_layer_setbl.hpp  boundary_layer_solver_ops.cpp  boundary_layer_solver_ops.hpp  (+12 more)
src/simulation/march/: base.hpp  context.hpp  du.cpp  du.hpp  du_numerics.hpp  march.cpp  march.hpp  mrchue_linear_system.hpp  ue.cpp  ue.hpp  ue_numerics.hpp  workflow_context.hpp
src/solver/boundary_layer/: blsolve.cpp  blsolve.hpp  boundary_layer.hpp  boundary_layer_aerodynamics.cpp  boundary_layer_aerodynamics.hpp  boundary_layer_builder.hpp  boundary_layer_diff_solver.cpp  boundary_layer_diff_solver.hpp  boundary_layer_geometry.cpp  boundary_layer_geometry.hpp  boundary_layer_mixed_mode.cpp  boundary_layer_mixed_mode.hpp  boundary_layer_relaxation.cpp  boundary_layer_relaxation.hpp  boundary_layer_runtime_state.cpp  boundary_layer_runtime_state.hpp  boundary_layer_setbl.cpp  boundary_layer_setbl.hpp  boundary_layer_solver_ops.cpp  boundary_layer_solver_ops.hpp  boundary_layer_state.hpp  boundary_layer_store.cpp  boundary_layer_store.hpp  boundary_layer_transition.cpp  boundary_layer_transition.hpp  boundary_layer_variables_solver.cpp  boundary_layer_workflow.cpp  boundary_layer_workflow.hpp  march_access.hpp  setbl_access.hpp  viscous_aerodynamic_coupling.hpp  viscous_initializer.hpp  viscous_iteration_ops.cpp  viscous_iteration_ops.hpp  viscous_types.hpp
src/solver/boundary_layer/initialization/: setbl.cpp  setbl.hpp  setbl_access.hpp  setbl_edge_velocity.hpp  setbl_jacobian.hpp  setbl_side_sweep.hpp  setbl_station_update.hpp  setbl_trailing_edge.hpp  viscous_initializer.hpp
src/solver/boundary_layer/runtime/: state.cpp  state.hpp
src/solver/boundary_layer/workflow/: mixed_mode.cpp  mixed_mode.hpp  relaxation.cpp  relaxation.hpp  solver_ops.cpp  solver_ops.hpp  transition.cpp  transition.hpp  workflow.cpp  workflow.hpp
src/solver/inviscid/: InviscidSolver.cpp  InviscidSolver.hpp  psi.cpp  psi.hpp
src/solver/march/: base.hpp  context.hpp  du.cpp  du.hpp  march.cpp  march.hpp  mrchue_linear_system.hpp  ue.cpp  ue.hpp  ue_numerics.hpp  workflow_context.hpp
src/solver/xfoil/: XFoil.cpp  XFoil.h  XFoil_aerodynamics.cpp  XFoil_geometry.cpp  XFoil_init.cpp  XFoil_viscous.cpp  viscous_update.cpp  viscous_update.hpp  xfoil_flowfield.cpp  xfoil_flowfield.hpp
tests/integration/: XFoilTest.cpp
tests/unit/: dissipation_test.cpp  math_util_test.cpp  spline_test.cpp
